@@ -5,21 +5,13 @@ $portal-top-bg-color: $page-bg-color !default;
 
 
 #portal-top {
+  background-color: $primary-color;
   padding: 0;
   max-width: $page-wrapper-width;
   margin: 0 auto;
   position: relative;
   font-size: $font-size-small;
-  background-color: $primary-color;
-  background-image: url("#{$portal_url}/++theme++plonetheme.onegovbear/images/mobile_logo.png");
-  background-size: 90px;
-  background-repeat: no-repeat;
-  background-position: 5px;
   @include clearfix();
-
-  @include screen-small {
-    background-image: none;
-  }
 
   @include screen-large {
     padding: 7px 0;
@@ -70,4 +62,20 @@ $portal-top-bg-color: $page-bg-color !default;
 
 #zoom-large {
   font-size: 1.4em;
+}
+
+
+#mobile-logo {
+  display: block;
+  position: absolute;
+
+  img {
+    width: 90px;
+    padding: 5px 5px;
+  }
+
+  @include screen-small {
+    display: none;
+  }
+
 }
