@@ -64,6 +64,10 @@
     display: none;
   }
 
+  #mobile-logo {
+    display: none;
+  }
+
   .portletArchiveListing {
     display: none;
   }
