@@ -5,6 +5,9 @@ Changelog
 1.1.4 (unreleased)
 ------------------
 
+- Implement moble logo viewlet.
+  [mathias.leimgruber]
+
 - Support a mobile logo.
   [mathias.leimgruber]
 
